--- a/popup.html
+++ b/popup.html
@@ -45,4 +45,10 @@
 
     <script src="popup.js"></script>
   </body>
+  <style>
+    body {
+      width: 500px;
+      padding-right: 20px;
+    }
+  </style>
 </html>
