basic autofilling done

--- a/popup.html
+++ b/popup.html
@@ -11,35 +11,45 @@
   </head>
   <body>
     <h2>Room Request Autofill</h2>
-    <label for="name">Full Organization Name:</label>
+    <label for="text">Full Organization Name:</label>
     <input type="text" id="orgName" />
 
-    <label for="name">Name:</label>
+    <label for="text">Requestor's Name:</label>
     <input type="text" id="name" />
 
-    <label for="name">Phone Number:</label>
+    <label for="text">Requestor's Phone Number:</label>
     <input type="text" id="phone" />
     
-    <label for="email">UTD Email:</label>
-    <input type="email" id="email" />
+    <label for="text">Requestor's UTD Email:</label>
+    <input type="text" id="email" />
 
-    <label for="email">President's UTD Email:</label>
-    <input type="email" id="presEmail" />
+    <label for="text">President's Name:</label>
+    <input type="text" id="presName" />
 
-    <label for="email">RUO's Name:</label>
-    <input type="email" id="ruoName" />
+    <label for="text">President's Phone Number:</label>
+    <input type="text" id="presPhone" />
 
-    <label for="email">RUO's UTD Email:</label>
-    <input type="email" id="ruoEmail" />
+    <label for="text">President's UTD Email:</label>
+    <input type="text" id="presEmail" />
 
-    <label for="email">Advisor's Name:</label>
-    <input type="email" id="advName" />
+    <label for="text">RUO's Name:</label>
+    <input type="text" id="ruoName" />
 
-    <label for="email">Advisor's Phone Number</label>
-    <input type="email" id="advPhone" />
-    <!-- Other options can be selected every time -->
+    <label for="text">RUO's Phone Number:</label>
+    <input type="text" id="ruoPhone" />
 
-    
+    <label for="text">RUO's UTD Email:</label>
+    <input type="text" id="ruoEmail" />
+
+    <label for="text">Advisor's Name:</label>
+    <input type="text" id="advName" />
+
+    <label for="text">Advisor's Phone Number</label>
+    <input type="text" id="advPhone" />
+
+    <label for="text">Advisor's UTD Email:</label>
+    <input type="text" id="advEmail" />
+
     <button id="fill">Autofill Form</button>
 
     <script src="popup.js"></script>
