reformatting and cleanup

--- a/popup.html
+++ b/popup.html
@@ -74,6 +74,9 @@
     <div class="container">
       <h2>Room Request Autofill</h2>
 
+      <button id="fill">Autofill Form</button>
+      <div style='padding-bottom: 20px;'></div>
+
       <label for="orgName">Full Organization Name:</label>
       <input type="text" id="orgName" />
 
@@ -112,8 +115,6 @@
 
       <label for="advEmail">Advisor's UTD Email:</label>
       <input type="text" id="advEmail" />
-
-      <button id="fill">Autofill Form</button>
     </div>
 
     <script src="popup.js"></script>
